--- a/doublekit-project-h5-ce/public/index.template.html
+++ b/doublekit-project-h5-ce/public/index.template.html
@@ -14,8 +14,5 @@
     
 </head>
 <body>
-    <div id='root'></div>
-
-    <script src="https://cdn.bootcss.com/echarts/4.2.1-rc1/echarts.min.js"></script>
-</body>
+    <div id='root'></div></body>
 </html> 
