--- a/1.html
+++ b/1.html
@@ -34,6 +34,7 @@
 
 <body>
     <div class="box">这是一个盒子</div>
+    <img src="./logo.ico" alt="">
     <button onclick="moveBoxLeft()">向左移动</button>
     <script>
         function moveBoxLeft() {
