--- a/1.html
+++ b/1.html
@@ -34,7 +34,9 @@
 
 <body>
     <div class="box">这是一个盒子</div>
-    <img src="./logo.ico" alt="">
+    <ul>
+        <li>sdd</li>
+    </ul>
     <button onclick="moveBoxLeft()">向左移动</button>
     <script>
         function moveBoxLeft() {
